# slimagents

./: .gitignore  CLAUDE.md  README.md  build.md  pyproject.toml  release.sh
.claude/: settings.json
agentix/repl/: repl.py
agentlib/: __init__.py
agentlib/repl/: repl.py
slimagents/: config.py  core.py  util.py
slimagents/repl/: repl.py
tests/: core_test.py  repl_test.py  type_test.py
tests/llm_cache/: cache.db
